src/styles/Home.css
/* home page */

.home-container {
     background: linear-gradient(var(--darkest-purple-color), var(--darkest-purple-color), var(--medium-purple-color), var(--palest-purple-color));
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     width: 90%;
     margin: 0;
     padding: 16px;
     color: var(--palest-purple-color);
     border-radius: 24px 24px 0px 0px;
}

.home-welcome-message {
     padding: 8px;
     margin: 8px;
     height: 16px;
     color: var(--palest-purple-color);
}

/* upcoming events */

.upcoming-event-container {
     color: var(--palest-purple-color);
     min-height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
}

.upcoming-event-header {
     font-size: 22px;
     margin-top: 48px;
     font-weight: 200;
}

.upcoming-event-list {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
     padding: 0;
     margin: 0;
     width: 100%;
}

.upcoming-event-list-item {
     list-style-type: none;
     margin: 8px;
     min-height: 300px;
     padding: 8px;
     border-radius: 16px;
     color: var(--darkest-blue-color);
}

.upcoming-event-list-item:hover {
     background-color: var(--darkest-blue-transparency-color);
}

.upcoming-event-image-save-container {
     position: relative;
     display: inline-block;
}

.upcoming-event-image {
     width: 500px;
     height: 300px;
     object-fit: cover;
     object-position: center;
     border-radius: 16px;
     display: block;
}

@media (max-width: 1700px) {
     .upcoming-event-list {
          flex-direction: column;
          align-items: center;
          justify-content: space-around;
     }

     .upcoming-event-list-item{
          max-width: 400px;
     }

     .upcoming-event-container {
          display: flex;
          align-items: center;
     }

     .upcoming-event-image {
          max-width: 100%;
          height: 250px;
          object-fit: cover;
          object-position: center;
          border-radius: 16px;
          display: block;
     }
}

.upcoming-event-image-save-container .saved-event-button-container {
     position: absolute;
     top: 8px;
     right: 8px;
     z-index: 10;
}

.upcoming-event-name {
     font-weight: 800;
     font-size: 16px;
}

.upcoming-event-tickets-unavailable {
     background: transparent;
     border: solid var(--darkest-blue-color);
     border-radius: 8px;
     color: var(--darkest-blue-color);
     min-width: fit-content;
     font-size: 16px;
     padding: 4px;
     margin: 8px 8px 0px 0px;
     min-width: fit-content;
     width: 70px;
     text-align: center;
}

